3822B1PE4/3_naive_gemm_omp/ghanga_junior/log.txt
/home/crazyproger/sandbox/gpu-2025/3822B1PE4/3_naive_gemm_omp/ghanga_junior/naive_gemm_omp.cpp: In function ‘std::vector<float> NaiveGemmOMP(const std::vector<float>&, const std::vector<float>&, int)’:
/home/crazyproger/sandbox/gpu-2025/3822B1PE4/3_naive_gemm_omp/ghanga_junior/naive_gemm_omp.cpp:8:38: error: ‘size_t’ does not name a type
    8 |     std::vector<float> c(static_cast<size_t>(n) * n, 0.0f);
      |                                      ^~~~~~
/home/crazyproger/sandbox/gpu-2025/3822B1PE4/3_naive_gemm_omp/ghanga_junior/naive_gemm_omp.cpp:3:1: note: ‘size_t’ is defined in header ‘<cstddef>’; did you forget to ‘#include <cstddef>’?
    2 | #include <omp.h>
  +++ |+#include <cstddef>
    3 | 
